refactor site.yml

--- a/site.yml
+++ b/site.yml
@@ -5,7 +5,7 @@
     - vars/bootstrap_var.yml
 
   tasks:
-    # Install Mongodb
+    # Add necessary repo to Sources-list
     - name: Add an Mongodb Apt signing key
       tags: mongodb
       apt_key:
@@ -22,9 +22,11 @@
       tags: nodejs, sources-list
       shell: "curl -sL https://deb.nodesource.com/setup_16.x | sudo bash -"
 
+    # Update APT Cache
     - name: Update apt cache
       apt: update_cache=yes
 
+    # Install required packages
     - name: Install mongodb, redis, nodejs, python3-pip, nginx
       tags: install, mongodb, redis, nodejs, python3-pip, nginx
       apt:
@@ -35,6 +37,7 @@
           - nodejs
           - nginx
 
+    # Setup mongodb
     - name: Start mongod service and enable at startup
       tags: mongodb, service, start
       service:
@@ -42,8 +45,7 @@
         state: started
         enabled: yes
 
-    # pymongo is required for setting up user in Mongodb
-    - name: Install the latest pymongo package
+    - name: Install the latest pymongo package # pymongo is required for setting up user in Mongodb
       tags: mongodb, pymongo
       pip: name=pymongo state=latest
 
@@ -69,13 +71,9 @@
         block: |
           security:
               authorization: enabled
+      notify: Restart mongod service
 
-    - name: Restart mongod service
-      tags: mongodb, service, restart
-      service:
-        name: mongod
-        state: restarted
-
+    # Setup redis
     - name: Configure Redis to use systemd
       tags: redis, systemd
       lineinfile:
@@ -98,12 +96,15 @@
         state: present
         regexp: "# requirepass"
         line: "requirepass {{ redis_password }}"
+      notify: Restart redis service
 
-    - name: Restart redis service
-      tags: redis, service, restart
-      service:
-        name: redis.service
-        state: restarted
+    # Setup nginx
+    - name: Generate nginx reverse proxy config file
+      tags: nginx, config
+      template:
+        src: "files/nginx/nginx-rev-proxy.j2"
+        dest: "/etc/nginx/sites-available/default"
+      notify: Restart nginx service
 
     - name: UFW - Allow Nginx HTTP connections
       tags: nginx, http, ufw, firewall
@@ -111,21 +112,7 @@
         rule: allow
         name: Nginx HTTP
 
-    - name: Copy SSH deploy keys to the server
-      tags: ssh, deploy, keys
-      copy:
-        src: "{{item}}"
-        dest: "/home/{{ create_user }}/.ssh/"
-        group: "{{ create_user }}"
-        mode: "400"
-      loop:
-        - files/ssh-deploy-keys/deploy-keys.pub
-        - files/ssh-deploy-keys/deploy-keys
-
-    - name: Register SSH deploy keys
-      tags: ssh, deploy, keys
-      shell: 'eval "$(ssh-agent -s)" && ssh-add /home/{{ create_user }}/.ssh/deploy-keys'
-
+    # Setup PM2
     - name: Install PM2 globally
       tags: pm2, npm
       npm:
@@ -136,8 +123,20 @@
       tags: pm2
       shell: "sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u {{ create_user }} --hp /home/{{ create_user }}"
 
-    # Required for git cloning
-    - name: Add github to the list of known sources
+    # Clone Project Repo from Github
+    - name: Copy SSH deploy keys to the server
+      tags: ssh, deploy, keys
+      copy:
+        src: "{{item}}"
+        dest: "/home/{{ create_user }}/.ssh/"
+        group: "{{ create_user }}"
+        mode: "400"
+      loop:
+        - files/ssh-deploy-keys/deploy-keys.pub
+        - files/ssh-deploy-keys/deploy-keys
+      notify: Register SSH deploy keys
+
+    - name: Add github to the list of known sources # Required for git cloning
       tags: git, clone, ssh
       shell: "ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts"
 
@@ -149,18 +148,12 @@
         dest: /home/{{ create_user }}/podific-api
         clone: yes
 
+    # Copy .env to the project directory
     - name: Copy .env file to the server
       tags: env-file, copy
       copy:
         src: "{{ env_file_source_path }}"
         dest: "/home/{{ create_user }}/podific-api/.env"
-
-    - name: Generate nginx reverse proxy config file
-      tags: nginx, config
-      template:
-        src: "files/nginx/nginx-rev-proxy.j2"
-        dest: "/etc/nginx/sites-available/default"
-      notify: Restart nginx service
 
   handlers:
     - name: Restart nginx service
@@ -168,3 +161,19 @@
       service:
         name: nginx
         state: restarted
+
+    - name: Restart mongod service
+      tags: mongodb, service, restart
+      service:
+        name: mongod
+        state: restarted
+
+    - name: Restart redis service
+      tags: redis, service, restart
+      service:
+        name: redis.service
+        state: restarted
+
+    - name: Register SSH deploy keys
+      tags: ssh, deploy, keys
+      shell: 'eval "$(ssh-agent -s)" && ssh-add /home/{{ create_user }}/.ssh/deploy-keys'
